# MIST

./: .gitignore  CMakeLists.txt  README.md  config.h.in
db/: m_instruments.db  m_instruments.db-journal
include/: config.h
src/: editwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
